@@ -1,6 +1,7 @@
 - Fixed server crashing on exception issue.
 - Add div id=js_spec_content into the body of the runner html.
 - Fixed timeout issues by immediately sending the head of the response.
+- Better error message when selenium server is not running
 
 0.2.0
 - Using Thin as the server
